<resources>
    <string name="app_name">Book_my_book</string>
    <string name="title_home">Mes livres</string>
    <string name="title_add_book">Ajouter un livre</string>
    <string name="bookTitle">Titre</string>
    <string name="bookISBN">ISBN</string>
    <string name="add">Ajouter</string>
    <string name="image_url">Url de l\'image</string>
    <string name="all">Tous</string>
    <string name="rented">Loués</string>
    <string name="book_image_description">Image du livre</string>
    <string name="book">Livre</string>
    <string name="delete">D</string>
    <string name="loanTo">Prêté à:</string>
    <string name="contact">C</string>
    <string name="LoanAt">Prêté le:</string>
    <string name="lend">Prêter</string>
</resources>