<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ui.addBook.AddBookFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/twBookDetailsTitle"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="48dp"
            android:layout_weight="1"
            android:text="@string/book"
            android:textAlignment="center"
            android:textSize="32sp"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/btnDeleteBook"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="#F60000"
            android:text="@string/delete"
            tools:ignore="TouchTargetSizeCheck,VisualLintBounds,TextContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etBookDetailsLoanTo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/loanTo"
            android:inputType="text"
            android:minHeight="48dp"
            android:autofillHints=""
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/btnGetContacts"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:text="@string/contact"
            tools:ignore="TouchTargetSizeCheck,VisualLintBounds">

        </Button>
    </LinearLayout>

    <EditText
        android:id="@+id/etBookDetailsLoanAt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/LoanAt"
        android:inputType="date"
        android:minHeight="48dp"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btnLoanBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lend"
        tools:ignore="VisualLintButtonSize" />
</LinearLayout>