<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.addBook.AddBookFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="top"
        >
        <EditText
            android:id="@+id/etBookTitle"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:inputType="text"
            android:autofillHints="title"
            android:hint="@string/bookTitle"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/etBookISBN"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:autofillHints="ISBN"
            android:hint="@string/bookISBN"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/etBookImage"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:autofillHints="Image url"
            android:hint="@string/image_url"
            tools:ignore="VisualLintTextFieldSize" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="60dp"
        >

        <Button
            android:id="@+id/btnAddBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"
            tools:ignore="VisualLintButtonSize">

        </Button>
    </LinearLayout>
</LinearLayout>